feat (perm): Implement Repay Permission Slashed Trust Deposit #217
