# proto/verana/perm/v1/tx.swagger.json
@@ -656,7 +656,10 @@
     "verana.perm.v1.MsgRepayPermissionSlashedTrustDeposit": {
       "type": "object",
       "properties": {
-        "creator": {
+        "authority": {
+          "type": "string"
+        },
+        "operator": {
           "type": "string"
         },
         "id": {
